--- a/RKEngine.vcxproj
+++ b/RKEngine.vcxproj
@@ -22,9 +22,9 @@
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{b0212956-ed4f-4a08-8fa8-5071d6297973}</ProjectGuid>
-    <RootNamespace>CG3</RootNamespace>
+    <RootNamespace>RKEngine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>CG3</ProjectName>
+    <ProjectName>RKEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
