--- a/RKEngine.vcxproj
+++ b/RKEngine.vcxproj
@@ -170,6 +170,11 @@
     <ClCompile Include="ModelObj.cpp" />
     <ClCompile Include="Mtllib.cpp" />
     <ClCompile Include="Obj3D.cpp" />
+    <ClCompile Include="Particle.cpp" />
+    <ClCompile Include="ParticleEmitter.cpp" />
+    <ClCompile Include="ParticleManager.cpp" />
+    <ClCompile Include="PolygonParticle.cpp" />
+    <ClCompile Include="PolygonScene.cpp" />
     <ClCompile Include="RAudio.cpp" />
     <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="RDirectX.cpp" />
@@ -304,6 +309,11 @@
     <ClInclude Include="ModelObj.h" />
     <ClInclude Include="Mtllib.h" />
     <ClInclude Include="Obj3D.h" />
+    <ClInclude Include="Particle.h" />
+    <ClInclude Include="ParticleEmitter.h" />
+    <ClInclude Include="ParticleManager.h" />
+    <ClInclude Include="PolygonParticle.h" />
+    <ClInclude Include="PolygonScene.h" />
     <ClInclude Include="RAudio.h" />
     <ClInclude Include="Raycast.h" />
     <ClInclude Include="RConstBuffer.h" />
