わりとなんかいろいろ

--- a/RKEngine.vcxproj
+++ b/RKEngine.vcxproj
@@ -161,12 +161,17 @@
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="Color.cpp" />
     <ClCompile Include="ColPrimitive2D.cpp" />
+    <ClCompile Include="ColPrimitive3D.cpp" />
+    <ClCompile Include="Course.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="DebugCamera.cpp" />
+    <ClCompile Include="GameData.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="GoalSceneTransition.cpp" />
     <ClCompile Include="GraphicsPipeline.cpp" />
     <ClCompile Include="Image3D.cpp" />
     <ClCompile Include="IndexBuffer.cpp" />
+    <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Matrix4.cpp" />
@@ -174,9 +179,12 @@
     <ClCompile Include="ModelObj.cpp" />
     <ClCompile Include="Mtllib.cpp" />
     <ClCompile Include="Obj3D.cpp" />
+    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Quaternion.cpp" />
     <ClCompile Include="RAudio.cpp" />
     <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="RDirectX.cpp" />
+    <ClCompile Include="ResultScene.cpp" />
     <ClCompile Include="RInput.cpp" />
     <ClCompile Include="RootSignature.cpp" />
     <ClCompile Include="RWindow.cpp" />
@@ -189,11 +197,14 @@
     <ClCompile Include="SimpleSceneTransition.cpp" />
     <ClCompile Include="SphereCollision.cpp" />
     <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="SRBuffer.cpp" />
+    <ClCompile Include="TestScene.cpp" />
     <ClCompile Include="TextDrawer.cpp" />
     <ClCompile Include="Texture.cpp">
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Disabled</Optimization>
     </ClCompile>
     <ClCompile Include="TimeManager.cpp" />
+    <ClCompile Include="TitleScene.cpp" />
     <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Util.cpp" />
     <ClCompile Include="Vector2.cpp" />
@@ -296,22 +307,30 @@
     <ClInclude Include="Collision.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="ColPrimitive2D.h" />
+    <ClInclude Include="ColPrimitive3D.h" />
+    <ClInclude Include="Course.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="DebugCamera.h" />
+    <ClInclude Include="GameData.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="GoalSceneTransition.h" />
     <ClInclude Include="GraphicsPipeline.h" />
     <ClInclude Include="Image3D.h" />
     <ClInclude Include="IndexBuffer.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Matrix4.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="ModelObj.h" />
     <ClInclude Include="Mtllib.h" />
     <ClInclude Include="Obj3D.h" />
+    <ClInclude Include="Player.h" />
+    <ClInclude Include="Quaternion.h" />
     <ClInclude Include="RAudio.h" />
     <ClInclude Include="Raycast.h" />
     <ClInclude Include="RConstBuffer.h" />
     <ClInclude Include="RDirectX.h" />
+    <ClInclude Include="ResultScene.h" />
     <ClInclude Include="RInput.h" />
     <ClInclude Include="RootSignature.h" />
     <ClInclude Include="RWindow.h" />
@@ -324,9 +343,12 @@
     <ClInclude Include="SimpleSceneTransition.h" />
     <ClInclude Include="SphereCollision.h" />
     <ClInclude Include="Sprite.h" />
+    <ClInclude Include="SRBuffer.h" />
+    <ClInclude Include="TestScene.h" />
     <ClInclude Include="TextDrawer.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="TimeManager.h" />
+    <ClInclude Include="TitleScene.h" />
     <ClInclude Include="Transform.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="Vector2.h" />
