--- a/RKEngine.vcxproj
+++ b/RKEngine.vcxproj
@@ -81,12 +81,12 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)Lib;$(SolutionDir)Lib\DirectXTex;$(SolutionDir)Lib\assimp</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)Lib;$(SolutionDir)Lib\DirectXTex;$(SolutionDir)Lib\assimp;$(SolutionDir)Lib\ImGui</IncludePath>
     <LibraryPath>$(SolutionDir)Lib;$(SolutionDir)Lib\assimp;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)Lib;$(SolutionDir)Lib\DirectXTex;$(SolutionDir)Lib\assimp</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)Lib;$(SolutionDir)Lib\DirectXTex;$(SolutionDir)Lib\assimp;$(SolutionDir)Lib\ImGui</IncludePath>
     <LibraryPath>$(SolutionDir)Lib;$(SolutionDir)Lib\assimp;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -129,10 +129,13 @@
       <ConformanceMode>false</ConformanceMode>
       <TreatWarningAsError>true</TreatWarningAsError>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -145,6 +148,8 @@
       <ConformanceMode>false</ConformanceMode>
       <TreatWarningAsError>true</TreatWarningAsError>
       <RuntimeLibrary>MultiThreaded</RuntimeLibrary>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -153,6 +158,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreSpecificDefaultLibraries>%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
+      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -185,6 +191,7 @@
     <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="RDirectX.cpp" />
     <ClCompile Include="ResultScene.cpp" />
+    <ClCompile Include="RImGui.cpp" />
     <ClCompile Include="RInput.cpp" />
     <ClCompile Include="RootSignature.cpp" />
     <ClCompile Include="RWindow.cpp" />
@@ -331,6 +338,7 @@
     <ClInclude Include="RConstBuffer.h" />
     <ClInclude Include="RDirectX.h" />
     <ClInclude Include="ResultScene.h" />
+    <ClInclude Include="RImGui.h" />
     <ClInclude Include="RInput.h" />
     <ClInclude Include="RootSignature.h" />
     <ClInclude Include="RWindow.h" />
@@ -369,6 +377,9 @@
   <ItemGroup>
     <ProjectReference Include="Lib\DirectXTex\DirectXTex_Desktop_2022_Win10.vcxproj">
       <Project>{371b9fa9-4c90-4ac6-a123-aced756d6c77}</Project>
+    </ProjectReference>
+    <ProjectReference Include="Lib\ImGui\ImGui.vcxproj">
+      <Project>{491d8eaf-cc8c-414b-a479-0090d6b6b8be}</Project>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
