--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,7 @@ Size=550,680
 Collapsed=0
 
 [Window][Debug]
-Pos=23,14
+Pos=53,43
 Size=400,300
 Collapsed=0
 
@@ -41,5 +41,10 @@ Collapsed=0
 [Window][Sound Control]
 Pos=800,10
 Size=400,150
+Collapsed=0
+
+[Window][Control]
+Pos=800,10
+Size=400,500
 Collapsed=0
 
